--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -24,8 +24,9 @@
       1,
       { "allowAllCaps": false, "allowNamespace": true }
     ],
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/alt-text": [
-      2,
+      1,
       {
         "elements": ["img", "object", "area", "input[type=\"image\"]"],
         "img": ["Image"],
