add focus to starting page

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -16,6 +16,12 @@
     }
   },
   "rules": {
+    "jsx-a11y/no-autofocus": [
+      0,
+      {
+        "ignoreNonDOM": true
+      }
+    ],
     "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
