--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,6 +17,7 @@
   },
   "type": "module",
   "dependencies": {
+    "express": "^4.17.3",
     "uuid": "^8.3.2",
     "websocket": "^1.0.34"
   }
